# precision-agrotech

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
docker/: Dockerfile  docker-compose.yml
docs/: veri-gereksinimi.md
docs/references/: INDEX.md
scripts/: 01_synthetic_demo.py
src/tarla_ai/: __init__.py  cli.py  config.py  reference.py
src/tarla_ai/advisory/: __init__.py  engine.py  models.py
src/tarla_ai/agronomy/: __init__.py  bbch.py  growth_stages.py
src/tarla_ai/analysis/: __init__.py  dto.py
src/tarla_ai/climate/: __init__.py  analysis.py  charts.py  client.py  labels.py  models.py  reference.py
src/tarla_ai/core/: __init__.py  errors.py  raster.py
src/tarla_ai/drone/: __init__.py  analysis.py
src/tarla_ai/drone/indices/: __init__.py  rgb.py  spectral.py  thermal.py
src/tarla_ai/indices/: __init__.py  _common.py  rgb.py  spectral.py  stress.py
src/tarla_ai/io/: __init__.py  raster.py  soil_pdf.py
src/tarla_ai/rules/: __init__.py  engine.py  thresholds.py
src/tarla_ai/soil/: __init__.py  analysis.py  parsing.py  reference.py  validation.py
src/tarla_ai/ui/: __init__.py  app.py  html.py  pdf_view.py  theme.py
src/tarla_ai/ui/components/: __init__.py  advisory_panel.py  bbch_calendar.py  climate_panel.py  explainer_box.py  growth_table.py  soil_table.py  (+3 more)
src/tarla_ai/water/: __init__.py  analysis.py  parsing.py  reference.py  validation.py
tests/: test_advisory.py  test_climate_analysis.py  test_drone_analysis.py  test_indices.py  test_rules.py  test_soil_parsing.py  test_soil_validation.py  test_water.py
