[project]
name = "tarla-ai"
version = "0.1.0"
description = "Yapay zeka destekli hassas tarim - bugday/arpa pilot tarla (DJI Mavic 3 Enterprise + Sentinel-2)"
requires-python = ">=3.11"
dependencies = [
    # --- Cekirdek geospatial ---
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    # --- Goruntu / sayisal ---
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-image>=0.22",
    "pykrige>=1.7",
    # --- Veri dogrulama / config ---
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # --- Analitik ---
    "duckdb>=0.10",
    # --- Gorsellestirme ---
    "matplotlib>=3.8",
    "streamlit>=1.58.0",
    "pymupdf>=1.27.2.3",
]

[project.scripts]
tarla = "tarla_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tarla_ai"]

[dependency-groups]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "jupyterlab>=4.0",
    "playwright>=1.60.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=tarla_ai --cov-report=term-missing"
